Commit made from VS Code Azure Static Web Apps

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
+    <h2>Add an API to Azure Static Web Apps with Azure Functions</h2>
   </main>
 </body>
 
