--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,23 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Vanilla JavaScript App</title>
 </head>
 
 <body>
-  <main>
+    <main>
     <h1>Vanilla JavaScript App</h1>
-    <h2>Add an API to Azure Static Web Apps with Azure Functions</h2>
+    <h2>Loading content from the API: <b id="name">...</b></h2>
+    
+    <script>
+    (async function() {
+        const { text } = await( await fetch(`/api/message`)).json();
+        document.querySelector('#name').textContent = text;
+    }());
+    </script>
   </main>
 </body>
 
